test/positive/feature_implements.java

public class feature_implements implements java.io.Serializable, test {
  public feature_implements() {}
  public int x;
}
