test/negative/feature_multiplevariablesperdeclaration.java

public class feature_multiplevariablesperdeclaration {
  public feature_multiplevariablesperdeclaration() {}
  public int x,y,z;
}
